[gd_scene load_steps=3 format=3 uid="uid://dkq5dyfxxb0o8"]

[ext_resource type="Script" uid="uid://bbvkmmm86vxkl" path="res://objects/tower/view.gd" id="1_syrbq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_syrbq"]
resource_local_to_scene = true
radius = 60.0

[node name="ViewArea2D" type="Area2D"]
collision_layer = 32
collision_mask = 4
script = ExtResource("1_syrbq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_syrbq")

[node name="NoObstacle" type="RayCast2D" parent="."]
target_position = Vector2(0, 60)
collision_mask = 3

[connection signal="body_entered" from="." to="." method="add_enemy"]
[connection signal="body_exited" from="." to="." method="remove_enemy"]
